--- a/chat/src/Components/App/MessageList/Message/Message.module.scss
+++ b/chat/src/Components/App/MessageList/Message/Message.module.scss
@@ -1,25 +1,21 @@
 .message {
     display: flex;
     flex-direction: column;
-    margin-left: auto;
-    max-width: 200px;
+    margin: 0 auto 0 20px;
+    max-width: 800px;
 
-    &_bot {
-        margin-left: 10px;
-        margin-right: auto;
-        list-style: none;
-    }
     &_bot .message__text {
         background-color: rgb(177, 194, 161);
     }
 
     &__text {
+        font-size: 25px;
         background-color: rgb(127, 126, 213);
         padding: 5px 10px 20px;
         border-radius: 15px;
         border: 1px solid rgb(40, 40, 40);
         color: #fff;
-        text-align: end;
+        overflow: hidden;
     }
 
     &__info {
