--- a/chat/src/Components/App/ChatInput/chat-input.module.scss
+++ b/chat/src/Components/App/ChatInput/chat-input.module.scss
@@ -1,12 +1,18 @@
 .chatInput {
     display: flex;
-    padding: 10px;
-    background-color: rgb(75, 75, 75);
-
+    padding: 40px;
+    background-color: rgb(236, 233, 233);
+    border-top: 1px solid #ccc;
     &_text {
         flex-grow: 1;
+        padding: 0 10px;
+        font-size: 25px;
+        color: #fff;
+        font-size: 25px;
     }
     &_button {
-        margin-left: 5px;
+        margin-left: 30px;
+        font-size: 25px;
+        padding: 10px 20px;
     }
 }
