--- a/chat/src/Components/App/MessageList/MessagesList.module.scss
+++ b/chat/src/Components/App/MessageList/MessagesList.module.scss
@@ -2,7 +2,6 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    width: 100%;
     padding: 20px 0px 20px 10px;
     gap: 35px;
     margin: 0;
@@ -10,10 +9,10 @@
 
     &__wrapper {
         overflow-y: scroll;
-        height: 500px;
         display: flex;
         background-color: rgb(236, 233, 233);
         display: flex;
         flex-direction: column-reverse;
+        flex-grow: 1;
     }
 }
