--- a/chat/src/Components/App/app.module.scss
+++ b/chat/src/Components/App/app.module.scss
@@ -1,8 +1,19 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 .app {
-    max-width: 320px;
-    margin: 40px auto;
-    border-radius: 20px;
     border: 3px solid rgb(40, 40, 40);
     overflow: hidden;
     box-sizing: border-box;
+    display: flex;
+    height: 100vh;
+
+    &__right {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+    }
 }
