--- a/chat/src/Components/App/Chat/ChatInput/chat-input.module.scss
+++ b/chat/src/Components/App/Chat/ChatInput/chat-input.module.scss
@@ -3,6 +3,7 @@
     padding: 40px;
     background-color: rgb(236, 233, 233);
     border-top: 1px solid #ccc;
+    margin-top: auto;
     &_text {
         flex-grow: 1;
         padding: 0 10px;
