--- a/chat/src/Components/App/Chat/chat.module.scss
+++ b/chat/src/Components/App/Chat/chat.module.scss
@@ -9,11 +9,11 @@
     overflow: hidden;
     box-sizing: border-box;
     display: flex;
-    height: 100vh;
+    flex-grow: 1;
 
     &__right {
         display: flex;
         flex-direction: column;
-        flex-grow: 1;
+        width: 100%;
     }
 }
