--- a/chat/src/Components/App/Chat/Chat-list/formAddRoom/formAddRoom.module.scss
+++ b/chat/src/Components/App/Chat/Chat-list/formAddRoom/formAddRoom.module.scss
@@ -1,7 +1,7 @@
 .form {
     display: flex;
     justify-content: space-between;
-    padding-top: 20px;
+    padding: 20px 10px;
     border-top: 1px solid #ccc;
 }
 
