--- a/chat/src/Components/App/Chat/chat.module.scss
+++ b/chat/src/Components/App/Chat/chat.module.scss
@@ -15,5 +15,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
+        height: 100vh;
+        overflow: hidden;
     }
 }
